// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Where related tests Multiple ids 1`] = `
Array [
  Object {
    "createdAt": "2018-10-08T18:39:33.000Z",
    "customers": Array [
      "0000",
    ],
    "id": "667",
    "indication": Object {
      "id": "1",
      "name": "SCI",
    },
    "lastSessionDate": "2016-10-01T00:00:00.000Z",
    "myPatient": true,
    "patientId": "0000",
    "serialNumbers": Array [
      "21601009",
    ],
    "sessionsCount": 127001,
    "steps": 24099980,
    "upTime": 68599053,
  },
  Object {
    "createdAt": "2018-10-08T18:39:33.000Z",
    "customers": Array [
      "0001",
    ],
    "id": "668",
    "indication": Object {
      "id": "2",
      "name": "Stroke",
    },
    "lastSessionDate": "2016-10-01T00:00:00.000Z",
    "myPatient": true,
    "patientId": "0001",
    "serialNumbers": Array [
      "21601009",
    ],
    "sessionsCount": 127001,
    "steps": 24099980,
    "upTime": 68599053,
  },
]
`;

exports[`Where related tests Should handle empty relationships for related resources 1`] = `
Array [
  Object {
    "createdAt": "2018-10-08T18:39:33.000Z",
    "customers": Array [
      "0002",
    ],
    "id": "669",
    "indication": Object {
      "id": "3",
      "name": "Something Else",
    },
    "lastSessionDate": "2016-10-01T00:00:00.000Z",
    "myPatient": true,
    "patientId": "0002",
    "serialNumbers": Array [
      "21601009",
    ],
    "sessionsCount": 127001,
    "steps": 24099980,
    "upTime": 68599053,
  },
]
`;

exports[`Where related tests Should return all the available relationships 1`] = `
Array [
  Object {
    "areaId": "23",
    "atticStock": 43,
    "baseQuantity": 60,
    "bidGroupId": null,
    "careWarrantyFileId": null,
    "clientBudgetCents": 1600,
    "createdAt": "2019-10-15T18:25:52.906Z",
    "customNumber": "C20",
    "description": "Regular Swivel Chair with long description including details about its aspect, dimentions and price",
    "designedSpecsFileId": null,
    "fileCareWarrantyId": null,
    "fileDesignerSpecsId": null,
    "id": "220",
    "invoiceFileId": null,
    "isCommitted": false,
    "isPlaceholder": false,
    "overagePercent": 85,
    "overageValue": 51,
    "parentId": null,
    "price": 854.92,
    "priceCents": 85492,
    "priceCurrency": "USD",
    "projectId": "1",
    "purchaseOrderId": "1",
    "quoteFileId": null,
    "shopDrawingsFileId": null,
    "specCategoryId": "2",
    "specDetailIdSequence": Array [
      "1976",
      "1979",
      "1981",
      "6051",
    ],
    "specDetails": Array [
      Object {
        "createdAt": "2019-10-15T18:28:53.422Z",
        "description": null,
        "id": "6051",
        "imageSrc": null,
        "locked": false,
        "roomTypes": Array [
          Object {
            "createdAt": "2019-10-15T18:28:53.435Z",
            "id": "1",
            "name": "AreaRoom 9",
            "par": 4,
            "perRoom": 4,
            "roomCount": 9,
            "specDetailId": "6051",
            "updatedAt": "2019-10-15T18:28:53.435Z",
          },
          Object {
            "createdAt": "2019-10-15T18:28:53.435Z",
            "id": "2",
            "name": "AreaRoom 8",
            "par": 6,
            "perRoom": 5,
            "roomCount": 6,
            "specDetailId": "6051",
            "updatedAt": "2019-10-15T18:28:53.435Z",
          },
          Object {
            "createdAt": "2019-10-15T18:28:53.435Z",
            "id": "3",
            "name": "AreaRoom 7",
            "par": 6,
            "perRoom": 5,
            "roomCount": 6,
            "specDetailId": "6051",
            "updatedAt": "2019-10-15T18:28:53.435Z",
          },
        ],
        "specId": "220",
        "title": null,
        "type": "QCParBased",
        "unitsNeeded": null,
        "unitsPerCase": 4,
        "updatedAt": "2019-10-15T18:28:53.422Z",
      },
      Object {
        "createdAt": "2019-10-15T18:25:53.749Z",
        "description": "Larger Dead Fewer Valley Selection",
        "id": "1981",
        "imageSrc": null,
        "locked": false,
        "specId": "220",
        "title": "Itself Machinery",
        "type": "Description",
        "unitsNeeded": 10,
        "unitsPerCase": 11,
        "updatedAt": "2019-10-15T18:25:53.749Z",
      },
      Object {
        "createdAt": "2019-10-15T18:25:53.749Z",
        "description": "Small Partly Near Climb Actual",
        "id": "1979",
        "imageSrc": null,
        "locked": false,
        "specId": "220",
        "title": "Herd Somebody",
        "type": "Description",
        "unitsNeeded": 10,
        "unitsPerCase": 11,
        "updatedAt": "2019-10-15T18:25:53.749Z",
      },
      Object {
        "createdAt": "2019-10-15T18:25:53.749Z",
        "description": "Fallen Pet Thee About Health",
        "id": "1976",
        "imageSrc": null,
        "locked": false,
        "specId": "220",
        "title": "Score Fifteen",
        "type": "Description",
        "unitsNeeded": 10,
        "unitsPerCase": 11,
        "updatedAt": "2019-10-15T18:25:53.749Z",
      },
    ],
    "totalForecast": 131657.68,
    "totalPrice": 131657.68,
    "totalQuantity": 154,
    "totalQuantityWithoutOverage": 103,
    "unitOfMeasure": "EA",
    "updatedAt": "2019-10-15T18:25:52.906Z",
    "vendorId": null,
  },
]
`;

exports[`Where related tests Should return empty array for uninitialized relationships queries 1`] = `Array []`;

exports[`Where related tests Single id 1`] = `
Array [
  Object {
    "createdAt": "2018-10-08T18:39:33.000Z",
    "customers": Array [
      "0000",
    ],
    "id": "667",
    "indication": Object {
      "id": "1",
      "name": "SCI",
    },
    "lastSessionDate": "2016-10-01T00:00:00.000Z",
    "myPatient": true,
    "patientId": "0000",
    "serialNumbers": Array [
      "21601009",
    ],
    "sessionsCount": 127001,
    "steps": 24099980,
    "upTime": 68599053,
  },
]
`;
